--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1196,8 +1196,8 @@ h2.tap i {
   }
 
   .rsvp-fin .show-invite {
-    top: 11%;
-    width: 100%;
+    top: 9%;
+    width: calc(90% - 7px);
     text-align: center;
   }
 
