--- a/public/css/app.css
+++ b/public/css/app.css
@@ -685,6 +685,8 @@ h2.tap i {
   border: none;
   letter-spacing: .25px;
   font-size: 1rem;
+  font-family: "Playfair Display";
+  font-weight: 600;
 }
 
 .invitation--body p.sm.invite em.underline {
