info msg --update

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -558,6 +558,7 @@ h2.tap {
                             user-select: none;
                             display: block; // font-family: "Playfair Display";
                             position: relative;
+                            // border:1px solid white;
                             @media (max-width: 360px) {
                                 padding: 12px 0;
                             }
