--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1607,6 +1607,11 @@ canvas:active {
   position: relative;
 }
 
+.cp .rsvps--cnt p span.plus_one-info {
+  font-size: .9rem;
+  opacity: .5;
+}
+
 .cp .rsvps--cnt p.yes span.icon {
   position: absolute;
 }
@@ -1669,6 +1674,9 @@ canvas:active {
   .cp .rsvps--cnt:not(.rsvps--head) p:nth-of-type(2) {
     margin-top: 0;
     display: inline-block;
+  }
+
+  .cp .rsvps--cnt:not(.rsvps--head) p:nth-of-type(1) {
     margin-right: 50px;
   }
 
@@ -1739,6 +1747,13 @@ canvas:active {
 
   .cp--stats h2:before {
     width: calc(100% + 37px);
+  }
+}
+
+@media (max-width: 360px) {
+  .cp {
+    padding: 36px;
+    width: calc(100% - 72px);
   }
 }
 
