--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1247,6 +1247,10 @@ canvas:active {
                     border-bottom: 2px solid $botticelli;
                     position: relative;
                 }
+                span.plus_one-info {
+                    font-size: .9rem;
+                    opacity: .5;
+                }
                 &.yes {
                     span.icon {
                         position: absolute;
@@ -1303,6 +1307,9 @@ canvas:active {
                     &:nth-of-type(1), &:nth-of-type(2) {
                         margin-top: 0;
                         display: inline-block;
+                        
+                    }
+                    &:nth-of-type(1) {
                         margin-right: 50px;
                     }
                     &.yes {
@@ -1327,6 +1334,7 @@ canvas:active {
             }
         }
     }
+    
     &--stats {
         flex-basis: 45%;
         margin-left: 40px;
@@ -1364,5 +1372,9 @@ canvas:active {
                 }
             }
         }
+    }
+    @media (max-width: 360px) {
+        padding: 36px;
+        width: calc(100% - 72px);
     }
 }
