--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1183,14 +1183,27 @@ h2.tap i {
 }
 
 .rsvp-fin .cal p {
+  position: relative;
   font-size: 1.2rem;
+}
+
+.rsvp-fin .cal p strong {
+  position: relative;
 }
 
 .rsvp-fin .cal p a {
   position: relative;
+  margin-top: 4px;
+  display: inline-block;
+  text-decoration: none;
+  border-bottom: none;
 }
 
-.rsvp-fin .cal p a img {
+.rsvp-fin .cal p a:nth-of-type(2) {
+  text-transform: none;
+}
+
+.rsvp-fin .cal p img {
   left: -26px;
   top: 3px;
   width: 20px;
